--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@prisma/client": "^2.29.1",
     "framer-motion": "^4.1.17",
     "next": "11.1.0",
     "react": "17.0.2",
@@ -28,6 +29,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.3.2",
+    "prisma": "^2.29.1",
     "typescript": "^4.3.5"
   }
 }
