--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\""
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.6",
@@ -28,8 +29,10 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "faker": "^5.5.3",
     "prettier": "^2.3.2",
     "prisma": "^2.29.1",
+    "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   }
 }
