--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^4.1.17",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/node": "^16.6.2",
