--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.13.0",
     "react-icons": "^4.2.0",
     "swr": "^0.5.6"
   },
