--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,7 @@
     "sourceMap": true,
     "outDir": "dist",
     "target": "es5",
-    "lib": [
-      "esnext"
-    ],
+    "lib": ["esnext", "DOM"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,12 +17,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
